welcome.lessons.welcome.conditions.Conditions.scala.code
if (estFeceMur()) {
  recule()
}else {
  avance()
}